src-webextensions/notion: Fix scrollbars under tables/dbs

--- a/src-webextensions/notion.user.css
+++ b/src-webextensions/notion.user.css
@@ -8,4 +8,15 @@
 @-moz-document domain("notion.so") {
 	/* workaround for a Chromium rendering bug - overlapping text from other lines */
 	a span[style*="opacity"] { opacity: unset !important; }
+
+	/* workaround for annoying scrollbars under tables/databases */
+	div.notion-table-view {
+		float: unset !important;
+		padding-left: 0 !important;
+		padding-right: 0 !important;
+		min-width: unset !important;
+		width: max-content;
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
